# DoroheDoro

./: .dockerignore  .env.example  .env.server.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.server.yml  docker-compose.yml  go.mod
.github/workflows/: agent-release.yml
agent-rs/: Cargo.toml  README.md  build.rs
agent-rs/.tmp/doro-agent/: state.db  state.db-journal
agent-rs/config/: agent.container.example.yaml  agent.env.example  agent.example.yaml  security-rules.example.yaml
agent-rs/docs/: runtime-audit.md
agent-rs/packaging/compat-manifest/: Dockerfile
agent-rs/packaging/container/: Dockerfile
agent-rs/packaging/systemd/: doro-agent.service
agent-rs/src/: app.rs  cli.rs  config.rs  doctor.rs  doctor_v2.rs  error.rs  health.rs  health_v2.rs  logging.rs  main.rs  metadata.rs  ops.rs  policy.rs  proto.rs  test_support.rs
agent-rs/src/batching/: batcher.rs  mod.rs
agent-rs/src/runtime/: degraded.rs  diagnostics.rs  heartbeat.rs  loop.rs  mod.rs  sender.rs  state_writer.rs
agent-rs/src/security/: mod.rs  models.rs  scanner.rs  worker.rs
agent-rs/src/sources/: file_source.rs  line_codec.rs  mod.rs
agent-rs/src/state/: mod.rs  models.rs  spool.rs  sqlite.rs
agent-rs/src/transport/: client.rs  mock.rs  mod.rs
cmd/fake-agent/: main.go
cmd/server/: main.go
contracts/proto/: agent.proto  alerts.proto  audit.proto  control.proto  deployment.proto  query.proto  runtime.proto
contracts/schemas/: security-posture-report-v1.schema.json  security-posture-rules-loaded-v1.schema.json  security-posture-scan-failed-v1.schema.json  security-posture-scan-skipped-v1.schema.json
contracts/subjects/: registry.yaml
defay1x9/: .env.server  Dockerfile  README.md  docker-compose.yml  go.sum
defay1x9/docs/: openapi.yaml  smoke-test.md
defay1x9/internal/config/: config.go
defay1x9/proto/: ingest.proto
deployments/artifacts/: Dockerfile  example.manifest.json  manifest.schema.json
deployments/docker/: fake-agent.Dockerfile  server.Dockerfile
deployments/examples/: agent-config.example.yaml  agent-image-compat-manifest.example.json  agent-image-metadata.example.json  agent.env.example  docker-compose.server.image-only.override.yml
deployments/nginx/: server.conf.template
deployments/packaging/: INSTALL.md
deployments/systemd/: doro-agent.service
deployments/vault/: deployment-plane-policy.hcl  init-dev.sh
docs/: agent-distribution.md  agent-runtime.md  agent-security-posture.md  architecture.md  demo-smoke.md  demo-stack.md  dev-pki.md  docs.go  endpoints-matrix.md  rust-vertical-slice.md  server-deploy.md  telegram-orchestrator.md
edge_api/: .dockerignore  .env.example  .env.server  Dockerfile  README.md  docker-compose.yml  endpoints-matrix.md  go.mod  go.sum
edge_api/docs/: agent-status-read-model.md  docs.go  embed.go  openapi.json  openapi.yaml
edge_api/proto/: README.md
edge_api/scripts/: render-openapi.cjs
frontend/: .env.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs  postcss.ensure-from.cjs
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  sitemap.ts
internal/app/: app.go
internal/bus/: jetstream.go
internal/config/: config.go
internal/httpapi/: router.go  swagger.go
internal/ingest/: service.go
internal/normalize/: normalizer.go
internal/query/: opensearch.go
internal/telemetry/: logger.go
pkg/proto/: ingest.pb.go
scripts/: sample-batch.json  smoke-agent-rs.sh
scripts/pki/: dev-ca.sh  issue-agent-cert.sh  issue-edge-cert.sh
scripts/release/: build-agent-artifacts.sh  generate-agent-image-manifest.sh  generate-manifest.sh
server-rs/: .env.example  Cargo.toml  Dockerfile  README.md
server-rs/crates/common/: Cargo.toml  build.rs
server-rs/crates/common/src/: bootstrap.rs  config.rs  error.rs  health.rs  json.rs  lib.rs  nats_subjects.rs  proto.rs  telemetry.rs
server-rs/crates/control-plane/: Cargo.toml
server-rs/crates/control-plane/src/: app.rs  config.rs  http.rs  lib.rs  main.rs  models.rs  repository.rs  service.rs  transport.rs
server-rs/crates/control-plane/src/telegram/: client.rs  integration.rs  mod.rs  repository.rs  runtime.rs  vault.rs
server-rs/crates/control-plane/tests/: basic.rs  smoke.rs
server-rs/crates/deployment-plane/: Cargo.toml
server-rs/crates/deployment-plane/src/: app.rs  artifacts.rs  config.rs  health.rs  lib.rs  main.rs  models.rs  repository.rs  service.rs  transport.rs  vault.rs
server-rs/crates/deployment-plane/src/credentials/: resolver.rs
server-rs/crates/deployment-plane/src/executor/: ansible.rs  mock.rs  mod.rs  traits.rs
server-rs/crates/deployment-plane/src/inventory/: resolver.rs
server-rs/crates/deployment-plane/src/policy/: resolver.rs
server-rs/crates/deployment-plane/src/render/: bootstrap.rs  inventory.rs  mod.rs  snapshot.rs
server-rs/crates/deployment-plane/tests/: smoke.rs
server-rs/crates/enrollment-plane/: Cargo.toml
server-rs/crates/enrollment-plane/src/: app.rs  http.rs  lib.rs  main.rs  repository.rs  service.rs  transport.rs
server-rs/crates/enrollment-plane/tests/: smoke.rs
server-rs/crates/ingestion-plane/: Cargo.toml
server-rs/crates/ingestion-plane/src/: app.rs  config.rs  http.rs  lib.rs  main.rs  service.rs  storage.rs  transport.rs
server-rs/crates/query-alert-plane/: Cargo.toml
server-rs/crates/query-alert-plane/src/: anomaly.rs  app.rs  config.rs  http.rs  lib.rs  main.rs  models.rs  repository.rs  service.rs  storage.rs  transport.rs
server-rs/crates/query-alert-plane/src/detectors/: mod.rs
server-rs/crates/query-alert-plane/src/pipeline/: mod.rs  signal.rs
server-rs/migrations/: 0001_init_enrollment.sql  0002_control_plane_init.sql  0003_enrollment_tokens_policy_revision.sql  0004_deployment_plane_init.sql  0005_control_audit_foundation.sql  0006_control_clusters_rbac_integrations_tickets_anomalies.sql  0007_deployment_target_artifacts.sql  0008_runtime_audit_and_alerts.sql  0009_anomaly_engine_foundation.sql  0010_control_telegram_orchestrator.sql
(+340 files in other folders)
