[workspace]
members = ["crates/common", "crates/enrollment-plane", "crates/control-plane"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.97"
async-nats = "0.39.0"
axum = "0.7.9"
chrono = { version = "0.4.40", features = ["clock", "serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
prost = "0.13.5"
prost-build = "0.13.5"
protoc-bin-vendored = "3.1.0"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serial_test = "3.2.0"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "migrate", "macros"] }
thiserror = "1.0.69"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync"] }
tokio-util = "0.7.14"
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
