[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
