[package]
name = "enrollment-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
chrono.workspace = true
common = { path = "../common" }
dotenvy.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-nats.workspace = true
axum.workspace = true
reqwest.workspace = true
serial_test.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
