[package]
name = "query-alert-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
chrono.workspace = true
common = { path = "../common" }
dotenvy.workspace = true
futures.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
urlencoding = "2.1.3"
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
